# elevation_mapping

./: CMakeLists.txt  README.md  package.xml
config/: file_path.yaml
config/elevation_maps/: long_range.yaml
config/postprocessing/: postprocessor_pipeline.yaml
config/robots/: ground_truth_demo.yaml  simple_demo_robot.yaml  waffle_robot.yaml
config/sensor_processors/: RSLidar-32.yaml  perfect.yaml  realsense_ZR300.yaml  realsense_d435.yaml
config/visualization/: fused.yaml  raw.yaml
include/elevation_mapping/: ElevationMap.hpp  ElevationMapping.hpp  RobotMotionMapUpdater.hpp
include/elevation_mapping/input_sources/: Input.hpp  InputSourceManager.hpp
include/elevation_mapping/postprocessing/: PostprocessingPipelineFunctor.hpp  PostprocessingWorker.hpp  PostprocessorPool.hpp
include/elevation_mapping/sensor_processors/: LaserSensorProcessor.hpp  PerfectSensorProcessor.hpp  SensorProcessorBase.hpp  StereoSensorProcessor.hpp  StructuredLightSensorProcessor.hpp
launch/: elevationMapping_launch.py  visualization.launch.py
rviz2/: custom_rviz2.rviz  viz.rviz
src/: ElevationMap.cpp  ElevationMapping.cpp  PointXYZRGBConfidenceRatio.cpp  RobotMotionMapUpdater.cpp  elevation_mapping_node.cpp  test.cpp  test_service.cpp
src/input_sources/: Input.cpp  InputSourceManager.cpp
src/postprocessing/: PostprocessingPipelineFunctor.cpp  PostprocessingWorker.cpp  PostprocessorPool.cpp
src/sensor_processors/: LaserSensorProcessor.cpp  PerfectSensorProcessor.cpp  SensorProcessorBase.cpp  StereoSensorProcessor.cpp  StructuredLightSensorProcessor.cpp
test/: ElevationMapTest.cpp
test/input_sources/: InputSourcesTest.cpp  test_input_sources.cpp
